add main-header component

--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,9 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
+    <link rel="stylesheet" href="./css/components/_header.css">
     <link rel="stylesheet" href="./css/_blog.css">
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
     
