--- a/contacts.html
+++ b/contacts.html
@@ -15,6 +15,7 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
+    <link rel="stylesheet" href="./css/components/_header.css">
     <link rel="stylesheet" href="./css/_contacts.css">
     <title>Content</title>
 </head>
