--- a/index.html
+++ b/index.html
@@ -15,10 +15,34 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
+    <link rel="stylesheet" href="./css/components/_header.css">
     <link rel="stylesheet" href="./css/_home.css">
     <title>Home page</title>
 </head>
 <body>
-    
+    <div class="home">
+        <header class="main-header flex justify-between">
+            <input type="checkbox" name="root-list" />
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">HOME</a>
+                    </li>
+                    <li>
+                        <a href="./blog.html">BLOG</a>
+                    </li>
+                    <li>
+                        <a class="disbled-link" href="#">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="./contacts.html">CONTENT</a>
+                    </li>
+                </ul>
+            </nav>
+
+         
+            <img src="./images/logo.png" alt="TechBloG">
+        </header>
+    </div>
 </body>
 </html>
