add footer to (home - blog - about)

--- a/blog.html
+++ b/blog.html
@@ -15,11 +15,57 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/components/_header.css">
+    <link rel="stylesheet" href="./css/layout/_header.css">
+    <link rel="stylesheet" href="./css/layout/_footer.css">
     <link rel="stylesheet" href="./css/_blog.css">
     <title>Blog</title>
 </head>
 <body>
+    <div class="blog">
+        <header class="main-header flex justify-between">
+            <input type="checkbox" name="root-list" />
+            <nav>
+                <ul>
+                    <li>
+                        <a href="./index.html">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#">BLOG</a>
+                    </li>
+                    <li>
+                        <a class="disbled-link" href="#">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="./contacts.html">CONTENTS</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <img src="./images/logo.png" alt="TechBloG">
+        </header>
+
+
+
+
+        <footer class="main-footer">
+            <h2>Contacts</h2>
+            <div class="contacts">
+                <article class="contact">
+                    <span class="contact__desc">Bryan Espina</span>
+                    <h3 class="contact__title">Facebook</h3>
+                </article>
     
+                <article class="contact">
+                    <span class="contact__desc">jbryan0812espina@gmail.com</span>
+                    <h3 class="contact__title">Gmail</h3>
+                </article>
+    
+                <article class="contact">
+                    <span class="contact__desc">0921-331-3641</span>
+                    <h3 class="contact__title">Contact Number</h3>
+                </article>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
