--- a/contacts.html
+++ b/contacts.html
@@ -15,11 +15,34 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/components/_header.css">
+    <link rel="stylesheet" href="./css/layout/_header.css">
     <link rel="stylesheet" href="./css/_contacts.css">
     <title>Content</title>
 </head>
 <body>
-    
+    <div class="contacts">
+        <header class="main-header flex justify-between">
+            <input type="checkbox" name="root-list" />
+            <nav>
+                <ul>
+                    <li>
+                        <a href="./index.html">HOME</a>
+                    </li>
+                    <li>
+                        <a href="./blog.html">BLOG</a>
+                    </li>
+                    <li>
+                        <a class="disbled-link" href="#">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTENTS</a>
+                    </li>
+                </ul>
+            </nav>
+
+         
+            <img src="./images/logo.png" alt="TechBloG">
+        </header>
+    </div>
 </body>
 </html>
