------------- add entire blog page

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,111 @@
             <img src="./images/logo.png" alt="TechBloG">
         </header>
 
+        <section class="blog-cover">
+            <div class="blog-cover__intro">
+                <h1>
+                    modern technology
+                </h1>
+                <p>
+                    how does the modern technology helps us in computer science
+                </p>
+            </div>
+        </section>
 
+        <main class="main-content">
+            <hr class="blog-line">
+
+            <section class="contents">
+                <p class="technology__desc teaching__desc--outside">
+                    Digitalization is inexorable, and it is occurring at an unprecedented rate. IoT, robots, artificial intelligence, blockchain, and big data are examples of new technologies that have the potential to transform the way we live, work, and communicate. Without a doubt, technology will be a critical component of the majority of people's jobs in the future, with everyone, at all levels, requiring far more advanced technological capability than they do today. Data analytics, artificial intelligence and machine learning, human-centric interactions, and information security specialists will be in high demand.
+                </p>
+
+                <div class="technologies">
+                    <h1 class="technologies__title">
+                        modern technology helps us in many ways 
+                    </h1>
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            1. change they way we work
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            2. Help us solve global challenges
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            3. Smarter education
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            4. more entrepreneurs
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            5. Digitalisation of everything
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            6. More benefits for more people
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                    <article class="technology">
+                        <h2 class="technology__title">
+                            7. machines teaching themselves
+                        </h2>
+                        <p class="technology__desc">
+                            The idea that technology would destroy the employment market is not new, but with the advent of new technologies, automation may occur more faster than previously. Automation is altering workplaces and will bring profound changes to practically every industry in the coming years. Schmidt does not believe that robots will replace humans in the workplace, but rather envisions collaboration between humans and robots. Highly repetitive and tedious work will be automated, freeing up human resources for more creative and fascinating tasks. He views robots as a tool for increasing performance and production while eliminating the mind-numbing, monotonous duties that many people face every day.
+                        </p>
+                    </article>
+
+                </div>
+                <hr class="blog-line">
+            </section>
+
+            <section class="references">
+                <h2 class="references__title">
+                    reference link : 
+                </h2>
+                <ul class="references__list">
+                    <li>
+                        Technology - Changing the Status Quo
+                    </li>
+                    <li>
+                        7 Ways Computers will Change our Lives
+                    </li>
+                </ul>
+            </section>
+
+        </main>
 
 
         <footer class="main-footer">
