--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/layout/_header.css">
+    <link rel="stylesheet" href="./css/layout/header.css">
     <link rel="stylesheet" href="./css/layout/_footer.css">
     <link rel="stylesheet" href="./css/_home.css">
     <title>Home page</title>
