remove underscore form all titles

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/layout/_header.css">
-    <link rel="stylesheet" href="./css/layout/_footer.css">
-    <link rel="stylesheet" href="./css/_about.css">
+    <link rel="stylesheet" href="./css/layout/header.css">
+    <link rel="stylesheet" href="./css/layout/footer.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>About</title>
 </head>
 <body>
