--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,9 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/layout/_header.css">
-    <link rel="stylesheet" href="./css/layout/_footer.css">
-    <link rel="stylesheet" href="./css/_blog.css">
+    <link rel="stylesheet" href="./css/layout/header.css">
+    <link rel="stylesheet" href="./css/layout/footer.css">
+    <link rel="stylesheet" href="./css/blog.css">
     <title>Blog</title>
 </head>
 <body>
