--- a/contacts.html
+++ b/contacts.html
@@ -15,8 +15,8 @@
     <!---styles------->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
-    <link rel="stylesheet" href="./css/layout/_header.css">
-    <link rel="stylesheet" href="./css/_contacts.css">
+    <link rel="stylesheet" href="./css/layout/header.css">
+    <link rel="stylesheet" href="./css/contacts.css">
     <title>Content</title>
 </head>
 <body>
