--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/global_style.css">
     <link rel="stylesheet" href="./css/layout/header.css">
-    <link rel="stylesheet" href="./css/layout/_footer.css">
-    <link rel="stylesheet" href="./css/_home.css">
+    <link rel="stylesheet" href="./css/layout/footer.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Home page</title>
 </head>
 <body>
