-------- add entire about page ------------

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="./blog.html">BLOG</a>
                     </li>
                     <li>
-                        <a class="disbled-link" href="#">ABOUT</a>
+                        <a href="./about.html">ABOUT</a>
                     </li>
                     <li>
                         <a href="./contacts.html">CONTENT</a>
