--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
     <title>About</title>
 </head>
 <body>
-    <div class="home">
+    <div class="about">
         <header class="main-header flex justify-between">
             <input type="checkbox" name="root-list" />
             <nav>
                 <ul>
                     <li>
-                        <a href="./index.html">HOME</a>
+                        <a href="./index.html">about</a>
                     </li>
                     <li>
                         <a href="./blog.html">BLOG</a>
@@ -45,12 +45,20 @@
             <img src="./images/logo.png" alt="TechBloG">
         </header>
 
-        <section class="home-cover">
-            <div class="home-cover__intro">
-
+        <section class="about-cover">
+            <div class="about-cover__intro">
+                <h1>
+                    &lt;about me&gt;
+                </h1>
+                <h2>
+                    bryan espina
+                </h2>
+                <p>
+                    I graduated from sti malolos with the course of Information technology in mobile application and web development (Itmawd). I’ am currently taking the course - bachelor of science in mathematics major in computer science in bulacan state university.
+                </p>
             </div>
-            <div class="home-cover__picture">
-
+            <div class="about-cover__picture">
+                <img src="./images/Picture.png" alt="bryan espina">
             </div>
         </section>
 
