--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
                         <a href="#">BLOG</a>
                     </li>
                     <li>
-                        <a class="disbled-link" href="#">ABOUT</a>
+                        <a href="./about.html">ABOUT</a>
                     </li>
                     <li>
                         <a href="./contacts.html">CONTENTS</a>
