add entire contacts page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     Technology in the field
                     of Computer Science
                 </p>
-                <button>
+                <a href="./blog.html">
                     read my blog
-                </button>
+                </a>
             </div>
         </section>
 
